intro and brand section completed

--- a/index.html
+++ b/index.html
@@ -4,12 +4,40 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/b9151e843f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <title>Influencer Gear</title>
 </head>
 
 <body>
-  test
+  <header></header>
+  <main>
+    <section class="intro-section">
+      <div class="intro-text">
+        <h1>Start your journey as Influencer</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, asperiores placeat? Cumque deserunt impedit
+          cum!</p>
+        <button>Prebook now <i class="fa-solid fa-arrow-right"></i></button>
+      </div>
+      <div class="intro-image-section">
+        <img class="intro-img" src="./images/Layer.png" alt="">
+      </div>
+    </section>
+    <section class="brand-section">
+      <hr>
+      <div class="brand-logos">
+        <img src="./logos/Alibaba.svg" alt="">
+        <img src="./logos/Amazon.svg" alt="">
+        <img src="./logos/Ebay.svg" alt="">
+        <img src="./logos/Walmart.svg" alt="">
+        <img src="./logos/Rakuten.svg" alt="">
+        <img src="./logos/Target.svg" alt="">
+        <img src="./logos/Daraz.svg" alt="">
+      </div>
+      <hr>
+    </section>
+  </main>
+  <footer></footer>
 </body>
 
 </html>
