popular collection added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,137 @@
       </div>
       <hr>
     </section>
+    <section class="popular-collection">
+      <h1 class="header">Popular Collection</h1>
+      <div class="collections">
+        <div class="collection">
+          <img src="./images/tripod.png" alt="">
+          <p class="title">Tripod</p>
+          <p class="amount">$150</p>
+          <div class="rating">
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star empty"></i>
+            <span>4.5</span>
+          </div>
+          <p class="text">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="collection">
+          <img src="./images/mic.png" alt="">
+          <p class="title">Mic</p>
+          <p class="amount">$150</p>
+          <div class="rating">
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star empty"></i>
+            <span>4.5</span>
+          </div>
+          <p class="text">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="collection">
+          <img src="./images/airpod.png" alt="">
+          <p class="title">Airpod</p>
+          <p class="amount">$150</p>
+          <div class="rating">
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star empty"></i>
+            <span>4.5</span>
+          </div>
+          <p class="text">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="collection">
+          <img src="./images/drone.png" alt="">
+          <p class="title">Drone</p>
+          <p class="amount">$150</p>
+          <div class="rating">
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star empty"></i>
+            <span>4.5</span>
+          </div>
+          <p class="text">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="collection">
+          <img src="./images/lights.png" alt="">
+          <p class="title">Lights</p>
+          <p class="amount">$150</p>
+          <div class="rating">
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star empty"></i>
+            <span>4.5</span>
+          </div>
+          <p class="text">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="collection">
+          <img src="./images/setup.png" alt="">
+          <p class="title">Setup</p>
+          <p class="amount">$150</p>
+          <div class="rating">
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star empty"></i>
+            <span>4.5</span>
+          </div>
+          <p class="text">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="collection">
+          <img src="./images/camera.png" alt="">
+          <p class="title">Camera</p>
+          <p class="amount">$150</p>
+          <div class="rating">
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star empty"></i>
+            <span>4.5</span>
+          </div>
+          <p class="text">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="collection">
+          <img src="./images/single-light.png" alt="">
+          <p class="title">Single Light</p>
+          <p class="amount">$150</p>
+          <div class="rating">
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star empty"></i>
+            <span>4.5</span>
+          </div>
+          <p class="text">Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="collection">
+          <img src="./images/action.png" alt="">
+          <p class="title">Go Pro</p>
+          <p class="amount">$150</p>
+          <div class="rating">
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star fill"></i>
+            <i class="fa-solid fa-star empty"></i>
+            <span>4.5</span>
+          </div>
+          <p class="text">Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
